Add some descriptions

--- a/_patterns/secondary-nav/config.yml
+++ b/_patterns/secondary-nav/config.yml
@@ -1,6 +1,6 @@
 title: "Secondary Navigation"
 description: |
-  This will be the secondary navigation for the products.
+  This will be the secondary navigation for the products, it will be on photos of products to show different angles and uses.
 
 patterns:
   carousel:
