Add province config

--- a/_patterns/form/config.yml
+++ b/_patterns/form/config.yml
@@ -44,3 +44,8 @@ patterns:
       title: "Last name"
       description: |
           This is the field for last name input
+
+  Province:
+      title: "Province"
+      description: |
+          This is the field for province input
