Add new title for cards

--- a/_patterns/cards/config.yml
+++ b/_patterns/cards/config.yml
@@ -3,7 +3,7 @@ description: |
   Cards are used to advertise merchandise, they will appear frequently throughout the site with different images inside them.
 
 patterns:
-  cards:
+  product:
     title: "Cards"
     description: |
       Cards are used to advertise merchandise, they will appear frequently throughout the site with different images inside them.
