Add banner description

--- a/_patterns/banner/config.yml
+++ b/_patterns/banner/config.yml
@@ -6,4 +6,4 @@ patterns:
   banner:
     title: "banner"
     description: |
-        This is the banner for the top of site
+        This is the banner for the top of site on the home page
