--- a/_patterns/gallery/config.yml
+++ b/_patterns/gallery/config.yml
@@ -3,7 +3,7 @@ description: |
   This will be the secondary navigation for the products, it will be on photos of products to show different angles and uses.
 
 patterns:
-  carousel:
+  gallery:
     title: "Gallery"
     description: |
         This will be on the product picture, pictures will change as requested.
