--- a/_config.yml
+++ b/_config.yml
@@ -20,3 +20,6 @@ patternbot:
       The primary colour was chosen for its vintage feel and it's contrast for accessibility. The mauve is youthful and appeals to the artistic sensibilties of the demographic.
     colors.secondary:
       The second colour was chosen for it's contrast to the primary colour. They are complementary and it adds a touch of brightness to the colour scheme. The grey is used for text and buttons.
+  layouts:
+    default:
+      The default layout should be used for almost evry page, it include the websites primary header and footer.
