Enter defaults and spelling mistakes

--- a/_config.yml
+++ b/_config.yml
@@ -22,4 +22,4 @@ patternbot:
       The second colour was chosen for it's contrast to the primary colour. They are complementary and it adds a touch of brightness to the colour scheme. The grey is used for text and buttons.
   layouts:
     default:
-      The default layout should be used for almost evry page, it include the websites primary header and footer.
+      The default layout should be used for almost every page, it include the websites primary header and footer.
