--- a/_patterns/banner/config.yml
+++ b/_patterns/banner/config.yml
@@ -7,3 +7,11 @@ patterns:
     title: "banner"
     description: |
         This is the banner for the top of site on the home page
+    fields:
+      -name: heading
+       type: string
+       example: "Make it Original. Make it Yours."
+
+      -name: text
+       type: string
+       example: "Locally made handcrafted original art"
