Add lesson to config

--- a/_config.yml
+++ b/_config.yml
@@ -23,3 +23,7 @@ patternbot:
   layouts:
     default:
       The default layout should be used for almost every page, it include the websites primary header and footer.
+
+  collections:
+    products:
+      output: true
