Add collections to configure file

--- a/_config.yml
+++ b/_config.yml
@@ -22,3 +22,6 @@ patternbot:
   layouts:
     default: |
       The default layout should be used for almost every page, it includes the websites primary header and footer.
+collections:
+  products:
+    output: true
