--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,12 @@ patternbot:
     default:
       The default layout should be used for almost every page, it include the websites primary header and footer.
 
-  collections:
+collections:
     products:
       output: true
+
+defaults:
+  - scope:
+      path:_products
+    values:
+      layout: product
