--- a/_config.yml
+++ b/_config.yml
@@ -25,3 +25,9 @@ patternbot:
 collections:
   products:
     output: true
+
+defaults:
+  - scope:
+      path: _products
+    values:
+      layout: product
