Add new card to products page

--- a/_patterns/cards/config.yml
+++ b/_patterns/cards/config.yml
@@ -4,7 +4,12 @@ description: |
 
 patterns:
   product:
-    title: "Cards"
+    title: "Hoodie"
+    description: |
+      Cards are used to advertise merchandise, they will appear frequently throughout the site with different images inside them.
+    width: "14em"
+  product2:
+    title: "Tee"
     description: |
       Cards are used to advertise merchandise, they will appear frequently throughout the site with different images inside them.
     width: "14em"
