--- a/_patterns/buttons/config.yml
+++ b/_patterns/buttons/config.yml
@@ -7,10 +7,24 @@ patterns:
     title: "Basic Button"
     description: |
       This basic button is used on white backgrounds to create contrast. It should only be used to link to other important areas of the website like promos.
+    fields:
+      - name: text
+        type: string
+        example: "See More"
+      - name: url
+        type: url
+        example: "/products/"
   light:
     title: "Light Button"
     description: |
       This light button is used on dark backgrounds to create contrast. It should only be used to link to other important areas of the website like promos.
+    fields:
+      - name: text
+        type: string
+        example: "See More"
+      - name: url
+        type: url
+        example: "/products/"
   ghost:
     title: "Ghost Button"
     description: |
