Add jekyll generator project

--- a/_config.yml
+++ b/_config.yml
@@ -21,3 +21,12 @@ patternbot:
   layouts:
     default: |
       The default layout should be used for every page as it includes the header and footer.
+collections:
+  products:
+    output: true
+
+defaults:
+  - scope:
+      path: _products
+    values:
+      layout: product
