--- a/_patterns/cards/config.yml
+++ b/_patterns/cards/config.yml
@@ -3,7 +3,13 @@ description: |
   You can use cards on the product page to establish what merchandise is available.
 
 patterns:
-    creature-card:
-      title: "Creature Card"
-      description: |
-        This card is used on the products page to display what categories of creatures are available.
+  creature-card:
+    title: "Creature Card"
+    description: |
+      This card is used on the products page to display what categories of creatures are available.
+    fields:
+      - name:
+        type: object
+        data:
+        source: "site.products[0]"
+        type: product
