--- a/_patterns/cards/config.yml
+++ b/_patterns/cards/config.yml
@@ -8,8 +8,8 @@ patterns:
     description: |
       This card is used on the products page to display what categories of creatures are available.
     fields:
-      - name:
+      - name: creaturecard
         type: object
         data:
-        source: "site.products[0]"
-        type: product
+          source: "site.products[0]"
+          type: product
