--- a/_patterns/header/config.yml
+++ b/_patterns/header/config.yml
@@ -1,3 +1,3 @@
   title: "Header"
   description: |
-    The footer is used at the top of every page and is included in the default layout.
+    The header is used at the top of every page and is included in the default layout (layouts > default).
