--- a/_config.yml
+++ b/_config.yml
@@ -25,11 +25,11 @@ patternbot:
       The default layout should be used for almost every page, it include the websites primary header and footer.
 
 collections:
-  products:
+  paintings:
     output: true
 
 defaults:
   - scope:
-      path: _products
+      path: _paintings
     values:
       layout: product
