--- a/_patterns/buttons/config.yml
+++ b/_patterns/buttons/config.yml
@@ -25,3 +25,13 @@ patterns:
       - name: text
         type: string
         example: "Add to Cart"
+  white-ghost:
+    title: "White"
+    description: This button should be used on the darker backgrounds so it can be read and stand out
+    fields:
+      - name: text
+        type: string
+        example: "See collection"
+      - name: url
+        type: url
+        example: "/products/"
